# minecraft-clone

./: CMakeLists.txt  README.md
include/: .Camera — kopia.h.un~  .Cube.h.un~  .FPSHandler.h.un~  .GuiHandler.h.un~  .PlayerViewComponent.h.un~  .Scene.h.un~  .Shader.h.un~  .ShaderComponent.h.un~  .TextureComponent — kopia.h.un~  Application.h  BufferComponent.h  BuffersObjectArray.h  BuffersObjectController.h  BuffersObjectUnit.h  Camera.h  CameraInterface.h  CameraMoving.h  Cube.h  Cube.h~  CubeBoard.h  CubeBoard.h.txt  FPSHandler.h  GrassTextureComponent.h  GuiHandler.h  GuiHandler.h~  IWindow.h  MVP.h  ManageBoards.h  MouseController.h  MouseCoords.h  MvpComponent.h  Player.h  PlayerViewComponent.h  PlayerViewComponent.h~  RenderComponent.h  RenderObject.h  Scene.h  Scene.h~  Shader.h  Shader.h~  (+10 more)
shader/: cubeFragmentShader.frag  cubeVertexShader.vert
shader/cube/grass/: grassCubeFragmentShader.frag
src/: .Cube.cpp.un~  .FPSHandler.cpp.un~  .GuiHandler.cpp.un~  .MvpComponent.cpp.un~  .Player.cpp.un~  .PlayerViewComponent.cpp.un~  .Scene.cpp.un~  .Shader.cpp.un~  .ShaderComponent.cpp.un~  Application.cpp  BufferComponent.cpp  BuffersObjectController.cpp  Camera.cpp  CameraMoving.cpp  Cube.cpp  Cube.cpp~  CubeBoard.cpp  CubeBoard.cpp.txt  CubeRenderComponent.cpp  FPSHandler.cpp  GrassTextureComponent.cpp  GuiHandler.cpp  GuiHandler.cpp~  MVP.cpp  ManageBoards.cpp  MouseController.cpp  MouseCoords.cpp  MvpComponent.cpp  MvpComponent.cpp~  Player.cpp  Player.cpp~  PlayerViewComponent.cpp  Scene.cpp  Scene.cpp~  Shader.cpp  Shader.cpp~  ShaderComponent.cpp  ShaderComponent.cpp~  ShaderFile.cpp  Texture.cpp  (+4 more)
